# Noetica

./: .env.example  .gcloudignore  .gitignore  AGENTS.md  DEMO_RUNBOOK.md  ISOLATION.md  QUICKSTART.md  README.md  TRUST_SURFACE.yaml  docker-compose.yml  next.config.mjs  package-lock.json  package.json  prophet-mesh.manifest.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vendor.manifest.json
.husky/: pre-push
Casks/: noetica-nightly.rb  noetica.rb
agent-machine/: .gitignore  Dockerfile  Dockerfile.broker  package-lock.json  package.json  requirements.txt  server.ts  tsconfig.json
app/: error.tsx  global-error.tsx  layout.tsx  page.tsx
ci/: appimage.sh
cli/: noetica-config.mjs  noetica-service.mjs  noetica.mjs
config/: models.ts  themes.ts
contexts/: ThemeContext.tsx
deploy/: gcp-frontier-proof.md
docs/: CLOUD-PARTNER-OUTREACH.md  COMPETITIVE.md  GAPS-AUDIT-2026-06-28.md  GRAPH-RL-FRAMEWORK.md  HANDOFF-2026-06-28.md  HANDOFF-agent-runs.md  MATRIX-integration.md  SOVEREIGN-SECURITY-LANE-LANDING.md  WORKPLAN-111-gaps.md  WORKPLAN-competitive-gaps.md  WORKPLAN-gaps.md  WORKPLAN-next-100.md  WORLD-CLASS-ROADMAP.md  WS-A-WS-C-COST-TEEUP.md  a2a-federation-design.md  adapter-contracts.md  anthropic-key-integration.md  biperpedia-search-design.md  cli-product-semantics.md  desktop-static-boundary.md  desktop-tauri.md  edge-service-sync-design.md  graph-intelligence-design.md  icon-pipeline.md  local-service-boundary.md  m2a-standalone-smoke.md  m3-superconscious-contract.md  onboarding-remediation.md  packaging-split.md  production-packaging-metadata.md  (+10 more)
embed-sidecar/: Cargo.toml
embed-sidecar/src/: main.rs  vec_store.rs
operator-sidecar/: Cargo.toml  README.md
operator-sidecar/models/: identity.onnx  smooth.onnx
operator-sidecar/scripts/: make_reference_model.py  train_fno.py
operator-sidecar/src/: main.rs
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
(+1389 files in other folders)
