[package]
name = "noetica-operator"
version = "0.1.0"
edition = "2021"
description = "Noetica's on-device neural-operator inference sidecar — ONNX Runtime (ort), no Python, no cloud."

[[bin]]
name = "noetica-operator"
path = "src/main.rs"

[dependencies]
ort = "=2.0.0-rc.12"
ndarray = "0.16"
tiny_http = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 2
strip = true
