[package]
name = "noetica"
version = "0.4.9"
description = "Noetica governed workstation desktop shell"
authors = ["SocioProphet"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
